--- a/assignments/ha-2/src/CMakeLists.txt
+++ b/assignments/ha-2/src/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.8)
 project(src C)
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES stack.c stack.h priority_queue.c priority_queue.h)
+set(SOURCE_FILES priority_queue.c priority_queue.h)
 add_executable(src ${SOURCE_FILES})
